12975
Encountered when investigating David macIver's http://thread.gmane.org/gmane.comp.lang.scala/9215

Attempted to compile the attached code with 2.6.1-final
{code}
sequence2.scala:125: error: type arguments [T] conform to the bounds of none of the overloaded alternatives of
 value ++: [B >: Any](Iterable[B])Collection[B] <and> [S >: Any](SequenceTest.this.seq.I[S])SequenceTest.this.seq.I[S]
      lzy(for{x: I[T] <- getArbitrarySized(size / 2); y: I[T] <- getArbitrarySized(size / 2)} yield (x . ++ [T] y)), 
                                                                                                         ^
Exception in thread "main" java.lang.AssertionError: assertion failed
	at scala.Predef$$.assert(Predef.scala:91)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedTypeApply$$1(Typers.scala:2326)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed1(Typers.scala:3021)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3130)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedQualifier(Typers.scala:3184)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed1(Typers.scala:3047)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3130)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3175)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedFunction(Typers.scala:1449)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed1(Typers.scala:2924)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3130)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedArg(Typers.scala:1535)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedArgToPoly$$1(Typers.scala:1644)
	at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$29.apply(Typers.scala:1653)
	at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$29.apply(Typers.scala:1653)
	at scala.List$$.map2(List.scala:277)
	at scala.tools.nsc.typechecker.Typers$$Typer.doTypedApply(Typers.scala:1653)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedApply$$1(Typers.scala:2439)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed1(Typers.scala:3027)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3130)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3175)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedFunction(Typers.scala:1449)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed1(Typers.scala:2924)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3130)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedArg(Typers.scala:1535)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedArgToPoly$$1(Typers.scala:1644)
	at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$29.apply(Typers.scala:1653)
	at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$29.apply(Typers.scala:1653)
	at scala.List$$.map2(List.scala:277)
	at scala.tools.nsc.typechecker.Typers$$Typer.doTypedApply(Typers.scala:1653)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedApply$$1(Typers.scala:2439)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed1(Typers.scala:3027)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3130)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedArg(Typers.scala:1535)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedArgToPoly$$1(Typers.scala:1644)
	at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$29.apply(Typers.scala:1653)
	at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$29.apply(Typers.scala:1653)
	at scala.List$$.map2(List.scala:277)
	at scala.tools.nsc.typechecker.Typers$$Typer.doTypedApply(Typers.scala:1653)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedApply$$1(Typers.scala:2439)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed1(Typers.scala:3027)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3130)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedArg(Typers.scala:1535)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedArgToPoly$$1(Typers.scala:1644)
	at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$29.apply(Typers.scala:1653)
	at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$29.apply(Typers.scala:1653)
	at scala.List$$.map2(List.scala:277)
	at scala.tools.nsc.typechecker.Typers$$Typer.doTypedApply(Typers.scala:1653)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedApply$$1(Typers.scala:2439)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed1(Typers.scala:3027)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3130)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3175)
	at scala.tools.nsc.typechecker.Typers$$Typer.transformedOrTyped(Typers.scala:3224)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedDefDef(Typers.scala:1297)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed1(Typers.scala:2868)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3130)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3164)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedStat$$1(Typers.scala:1500)
	at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$21.apply(Typers.scala:1529)
	at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$21.apply(Typers.scala:1529)
	at scala.List$$.loop$$1(List.scala:244)
	at scala.List$$.mapConserve(List.scala:261)
	at scala.List$$.loop$$1(List.scala:248)
	at scala.List$$.mapConserve(List.scala:261)
	at scala.List$$.loop$$1(List.scala:248)
	at scala.List$$.mapConserve(List.scala:261)
	at scala.List$$.loop$$1(List.scala:248)
	at scala.List$$.mapConserve(List.scala:261)
	at scala.List$$.loop$$1(List.scala:248)
	at scala.List$$.mapConserve(List.scala:261)
	at scala.List$$.loop$$1(List.scala:248)
	at scala.List$$.mapConserve(List.scala:261)
	at scala.List$$.loop$$1(List.scala:248)
	at scala.List$$.mapConserve(List.scala:261)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedStats(Typers.scala:1529)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedTemplate(Typers.scala:1147)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedClassDef(Typers.scala:1019)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed1(Typers.scala:2859)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3130)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3164)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedStat$$1(Typers.scala:1500)
	at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$21.apply(Typers.scala:1529)
	at scala.tools.nsc.typechecker.Typers$$Typer$$$$anonfun$$21.apply(Typers.scala:1529)
	at scala.List$$.loop$$1(List.scala:244)
	at scala.List$$.mapConserve(List.scala:261)
	at scala.List$$.loop$$1(List.scala:248)
	at scala.List$$.mapConserve(List.scala:261)
	at scala.List$$.loop$$1(List.scala:248)
	at scala.List$$.mapConserve(List.scala:261)
	at scala.List$$.loop$$1(List.scala:248)
	at scala.List$$.mapConserve(List.scala:261)
	at scala.tools.nsc.typechecker.Typers$$Typer.typedStats(Typers.scala:1529)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed1(Typers.scala:2855)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3130)
	at scala.tools.nsc.typechecker.Typers$$Typer.typed(Typers.scala:3164)
	at scala.tools.nsc.typechecker.Analyzer$$typerFactory$$$$anon$$2.apply(Analyzer.scala:40)
	at scala.tools.nsc.Global$$GlobalPhase.applyPhase(Global.scala:245)
	at scala.tools.nsc.Global$$GlobalPhase$$$$anonfun$$run$$1.apply(Global.scala:233)
	at scala.tools.nsc.Global$$GlobalPhase$$$$anonfun$$run$$1.apply(Global.scala:233)
	at scala.Iterator$$class.foreach(Iterator.scala:376)
	at scala.collection.mutable.ListBuffer$$$$anon$$1.foreach(ListBuffer.scala:255)
	at scala.tools.nsc.Global$$GlobalPhase.run(Global.scala:233)
	at scala.tools.nsc.Global$$Run.compileSources(Global.scala:529)
	at scala.tools.nsc.Global$$Run.compile(Global.scala:613)
	at scala.tools.nsc.Main$$.process(Main.scala:86)
	at scala.tools.nsc.Main$$.main(Main.scala:107)
	at scala.tools.nsc.Main.main(Main.scala)
{code}
